<resources>
    <string name="app_name">YouWatch</string>
    <string name="title_profile">Profile</string>
    <string name="title_discover">Discover</string>
    <string name="title_movies">Movies</string>
    <string name="title_shows">Shows</string>
    <string name="input_text">Search</string>
    <string name="label_movies">Movies</string>
    <string name="label_shows">Shows</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="label_login_button">Log In</string>
    <string name="shows_list_text">My shows</string>
    <string name="show_image_description">Show image</string>
    <string name="login_error_label">Username or password is wrong!</string>
</resources>
