<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_shows">

    <fragment
        android:id="@+id/navigation_shows"
        android:name="com.example.youwatch.ui.shows.ShowsFragment"
        android:label="@string/title_shows"
        tools:layout="@layout/fragment_shows" />

    <fragment
        android:id="@+id/navigation_movies"
        android:name="com.example.youwatch.ui.movies.MoviesFragment"
        android:label="@string/title_movies"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/navigation_discover"
        android:name="com.example.youwatch.ui.discover.DiscoverFragment"
        android:label="@string/title_discover"
        tools:layout="@layout/fragment_discover" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.youwatch.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>